<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/usuario"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/clave"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp" />


    <TextView
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/tipoUsuario"
        android:textStyle="bold"/>

   <Spinner
       android:layout_width="200dp"
       android:layout_height="40dp"
       android:spinnerMode="dialog"
       android:id="@+id/spTipoUsuario"/>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp">

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/acceder"
            android:onClick="accionIngresar"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/registrarse" />


    </GridLayout>


</LinearLayout>
