<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".carros.views.CarroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/carroToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/horizontal_login">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/car_new" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtCarroNombre"
                    android:layout_width="match_parent"
                    android:hint="@string/carro_lbl_nombre"
                    android:inputType="text"
                    style="@style/EditTextHint" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtCarroPlaca"
                    android:layout_width="match_parent"
                    android:hint="@string/carro_lbl_placa"
                    android:inputType="text"
                    style="@style/EditTextHint" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtCarroTelefono"
                    android:layout_width="match_parent"
                    android:hint="@string/carro_lbl_telefono"
                    android:inputType="number"
                    style="@style/EditTextHint" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtCarroPassword"
                    android:layout_width="match_parent"
                    android:hint="@string/carro_lbl_clave"
                    android:inputType="number"
                    style="@style/EditTextHint" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtCarroIMEI"
                    android:layout_width="match_parent"
                    android:hint="@string/carro_lbl_imei"
                    android:inputType="number"
                    style="@style/EditTextHint" />

                <Button
                        android:id="@+id/btnCarroRegistrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/login_mt_btn"
                        android:text="@string/usuario_btn_registrar"
                        android:background="@drawable/borde_redondeado" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>