<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".usuarios.views.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp">

        <ProgressBar
            android:id="@+id/pbLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/login_lbl_usuario"
            android:id="@+id/txtLogin"
            android:inputType="textEmailAddress"
            style="@style/EditTextHint"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:hint="@string/login_lbl_password"
            style="@style/EditTextHint"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_mt_btn"
            android:text="@string/login_lbl_ingresar"
            android:background="@drawable/borde_redondeado" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_lbl_clave"
            android:layout_marginTop="@dimen/login_mt_btn"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color_azul"
            android:textSize="@dimen/lblclave_size"
            android:onClick="goRecuperarClave" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>