<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".usuarios.views.UsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/usuarioToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/horizontal_login">

                <ImageView
                    android:id="@+id/login_logo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_height_logo"
                    android:layout_centerInParent="true"
                    android:background="@drawable/logo_blue" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtFirebaseCorreo"
                    android:layout_width="match_parent"
                    android:hint="@string/usuario_lbl_correo"
                    android:layout_marginTop="@dimen/login_mt_btn"
                    android:inputType="textEmailAddress"
                    style="@style/EditTextHint"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtFirebaseClave"
                    android:layout_width="match_parent"
                    android:hint="@string/usuario_lbl_clave"
                    android:inputType="textPassword"
                    style="@style/EditTextHint"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtFirebaseClaveConf"
                    android:layout_width="match_parent"
                    android:hint="@string/usuario_lbl_confirm_clave"
                    android:inputType="textPassword"
                    style="@style/EditTextHint"/>

                <Button
                    android:id="@+id/btnFirebaseRegistrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/login_mt_btn"
                    android:text="@string/usuario_btn_registrar"
                    android:background="@drawable/borde_redondeado" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>